SystemUI: unblock status bar alarm icon
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>